--- a/library_back/Dockerfile
+++ b/library_back/Dockerfile
@@ -6,5 +6,7 @@ WORKDIR /code
 
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
+COPY entrypoint.sh /usr/bin/
+RUN chmod +x /usr/bin/entrypoint.sh
 
-COPY . .
+ENTRYPOINT ["entrypoint.sh"]
